--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -89,13 +89,11 @@
 
         <FrameLayout
             android:id="@+id/AttachmentGroup"
-            android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/barrier_top">
-
             <ImageView
                 android:id="@+id/imageAttachment"
                 android:layout_width="match_parent"
@@ -103,13 +101,14 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/desc_attachment_image"
                 android:padding="@dimen/element_spacing"
-                android:visibility="visible"
-                tools:src="@drawable/ic_people_outline_24dp" />
-
+                android:visibility="gone"
+                tools:src="@drawable/ic_people_outline_24dp"
+                tools:visibility="visible" />
             <include
                 android:id="@+id/audio_attachment"
-                layout="@layout/audio_play" />
-
+                layout="@layout/audio_play"
+                android:visibility="gone"
+                tools:visibility="visible" />
             <include
                 android:id="@+id/video_attachment"
                 layout="@layout/video_play" />
@@ -175,9 +174,9 @@
             android:layout_marginTop="@dimen/common_spacing"
             android:checkable="true"
             android:contentDescription="@string/desc_icon_like"
-            tools:text="10"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+            tools:text="10" />
 
         <ImageButton
             android:id="@+id/UsersIB"
