--- a/app/src/main/res/layout/post_card.xml
+++ b/app/src/main/res/layout/post_card.xml
@@ -100,23 +100,27 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/desc_attachment_image"
                 android:padding="@dimen/element_spacing"
-                android:visibility="visible"
-                tools:src="@drawable/ic_people_outline_24dp" />
+                android:visibility="gone"
+                tools:src="@drawable/ic_people_outline_24dp"
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/audio_attachment"
-                layout="@layout/audio_play" />
+                layout="@layout/audio_play"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <include
                 android:id="@+id/video_attachment"
                 layout="@layout/video_play" />
         </FrameLayout>
+
         <TextView
             android:id="@+id/LinkPostTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:autoLink="web"
             android:layout_marginStart="@dimen/common_spacing"
+            android:autoLink="web"
             android:padding="@dimen/element_spacing"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/TextPostTV"
@@ -149,12 +153,12 @@
             style="@style/Widget.AppTheme.LikeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="10"
             android:layout_marginTop="@dimen/common_spacing"
             android:checkable="true"
             android:contentDescription="@string/desc_icon_like"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
+            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
+            tools:text="10" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
