--- a/app/src/main/res/layout/post_details_fragment_.xml
+++ b/app/src/main/res/layout/post_details_fragment_.xml
@@ -5,8 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    >
+    android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/PostDetailsABL"
@@ -43,10 +42,10 @@
                 android:layout_marginTop="@dimen/element_spacing"
                 android:layout_marginBottom="@dimen/common_spacing"
                 android:contentDescription="@string/desc_avatar_image"
-                tools:src="@drawable/img_test_avatar"
                 app:layout_constraintBottom_toBottomOf="@id/barrier_top"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                tools:src="@drawable/img_test_avatar" />
 
 
             <TextView
@@ -91,7 +90,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/barrier_top">
-
                 <ImageView
                     android:id="@+id/imageAttachment"
                     android:layout_width="match_parent"
@@ -99,13 +97,14 @@
                     android:adjustViewBounds="true"
                     android:contentDescription="@string/desc_attachment_image"
                     android:padding="@dimen/element_spacing"
-                    android:visibility="visible"
-                    tools:src="@drawable/ic_people_outline_24dp" />
-
+                    android:visibility="gone"
+                    tools:src="@drawable/ic_people_outline_24dp"
+                    tools:visibility="visible" />
                 <include
                     android:id="@+id/audio_attachment"
-                    layout="@layout/audio_play" />
-
+                    layout="@layout/audio_play"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
                 <include
                     android:id="@+id/video_attachment"
                     layout="@layout/video_play" />
@@ -134,8 +133,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/DatePublicationPostTV"
-                tools:text="@tools:sample/lorem[20]"
-                />
+                tools:text="@tools:sample/lorem[20]" />
 
             <TextView
                 android:id="@+id/TitleLikersTV"
@@ -160,14 +158,19 @@
                 app:layout_constraintTop_toBottomOf="@id/TitleLikersTV">
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/LikeB"
+                    android:id="@+id/LikeIB"
                     style="@style/Widget.AppTheme.LikeButton"
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/posts_avatar_size"
+                    android:layout_height="wrap_content"
                     android:checkable="true"
-                    app:icon="@drawable/ic_like_24dp"
+                    android:contentDescription="@string/desc_icon_like"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/barrier_middle"
                     tools:text="10" />
-                <include layout="@layout/avatars_multiple" android:id="@+id/list_avatars_likers"/>
+
+                <include
+                    android:id="@+id/list_avatars_likers"
+                    layout="@layout/avatars_multiple" />
 
             </LinearLayout>
 
@@ -203,7 +206,10 @@
                     android:checkable="true"
                     app:icon="@drawable/ic_people_outline_24dp"
                     tools:text="10" />
-                <include layout="@layout/avatars_multiple" android:id="@+id/list_avatars_mentioned"/>
+
+                <include
+                    android:id="@+id/list_avatars_mentioned"
+                    layout="@layout/avatars_multiple" />
             </LinearLayout>
 
             <ImageView
@@ -240,8 +246,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/element_spacing"
-                android:padding="@dimen/element_spacing"
                 android:autoLink="web"
+                android:padding="@dimen/element_spacing"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/TitleLinkTV"
                 tools:text="https://03www.ru/" />
