--- a/app/src/main/res/layout/post_new_fragment.xml
+++ b/app/src/main/res/layout/post_new_fragment.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
-            app:menu="@menu/menu_new_post_top_bar"
+            app:menu="@menu/menu_new_top_bar"
             app:navigationIcon="@drawable/ic_arrow_back_24dp"
             app:title="@string/title_new_post" />
 
@@ -35,13 +35,14 @@
         app:layout_constraintTop_toBottomOf="@id/NewPostABL">
 
         <LinearLayout
-            android:padding="@dimen/element_spacing"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/element_spacing">
 
             <EditText
                 android:id="@+id/ContentPostET"
+                android:hint="@string/hint_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
@@ -53,8 +54,9 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/common_spacing"
+                android:layout_marginBottom="@dimen/common_spacing"
                 android:hint="@string/link"
-
                 app:boxStrokeColor="@color/primary"
                 app:boxStrokeWidth="1dp">
 
@@ -66,20 +68,28 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <FrameLayout
+                android:id="@+id/AttachmentGroup"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+
                 <include
                     android:id="@+id/image_container"
-                    layout="@layout/image_load" />
+                    layout="@layout/image_load"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <include
                     android:id="@+id/audio_container"
-                    layout="@layout/audio_load" />
+                    layout="@layout/audio_load"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
 
                 <include
                     android:id="@+id/video_container"
-                    layout="@layout/video_load" />
+                    layout="@layout/video_load"
+                    android:visibility="gone"
+                    tools:visibility="visible" />
             </FrameLayout>
 
 
@@ -101,7 +111,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
-            app:menu="@menu/menu_new_post_bottom_bar" />
+            app:menu="@menu/menu_new_bottom_bar" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 
