--- a/app/src/main/res/layout/event_bottom_sheet_dialog.xml
+++ b/app/src/main/res/layout/event_bottom_sheet_dialog.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/element_spacing"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        >
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/DateEventET"
@@ -19,15 +19,25 @@
             android:hint="@string/hint_date_event"
             app:endIconDrawable="@drawable/ic_calendar_24dp"
             app:endIconMode="custom"
-            app:helperText="MM/dd/yyyy HH:mm"
+            app:helperText="dd/MM/yyyy HH:mm"
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/DataInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
+<!--        <ImageButton-->
+<!--            android:id="@+id/date_picker"-->
+<!--            android:layout_width="@dimen/icon_min_size"-->
+<!--            android:layout_height="@dimen/icon_min_size"-->
+<!--            android:layout_marginTop="9dp"-->
+<!--            android:background="@drawable/ic_calendar_24dp"-->
+<!--            app:layout_constraintTop_toTopOf="@id/DateEventET"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/DateEventET"-->
+<!--            android:importantForAccessibility="no" />-->
 
         <TextView
             android:id="@+id/TitleTypeTV"
@@ -39,12 +49,14 @@
             app:layout_constraintTop_toBottomOf="@id/DateEventET" />
 
         <RadioGroup
+            android:id="@+id/CalendarRG"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/common_spacing"
             app:layout_constraintTop_toBottomOf="@id/TitleTypeTV">
 
             <RadioButton
+                android:id="@+id/OnlineRB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:checked="true"
@@ -54,6 +66,7 @@
                 android:textStyle="bold" />
 
             <RadioButton
+                android:id="@+id/OfflineRB"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="@dimen/common_spacing"
