--- a/app/src/main/res/layout/event_new_fragment.xml
+++ b/app/src/main/res/layout/event_new_fragment.xml
@@ -115,6 +115,7 @@
             app:menu="@menu/menu_new_bottom_bar" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/CalendarFAB"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/desc_take_date"
