--- a/app/src/main/res/layout/job_new_fragment.xml
+++ b/app/src/main/res/layout/job_new_fragment.xml
@@ -27,7 +27,7 @@
         android:padding="@dimen/common_spacing">
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/NameETL"
+            android:id="@+id/NameTL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -38,20 +38,22 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/NameET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/PositionET"
+            android:id="@+id/PositionTL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/hint_position_edit_text"
-            app:layout_constraintTop_toBottomOf="@id/NameETL">
+            app:layout_constraintTop_toBottomOf="@id/NameTL">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/PositionET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -59,16 +61,17 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/LinkET"
+            android:id="@+id/LinkTL"
             style="?attr/textInputFilledStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/element_spacing"
             android:hint="@string/link"
-            app:layout_constraintTop_toBottomOf="@id/PositionET">
+            app:layout_constraintTop_toBottomOf="@id/PositionTL">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/LinkET"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
@@ -84,7 +87,7 @@
             android:layout_marginTop="@dimen/element_spacing"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/LinkET"
+            app:layout_constraintTop_toBottomOf="@id/LinkTL"
             tools:text="27.09.12 - PT" />
 
         <Button
