--- a/app/src/main/res/layout/user_job_fragment.xml
+++ b/app/src/main/res/layout/user_job_fragment.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="ui.users.UserFragment">
+    tools:context="ui.users.UserJobFragment">
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swiperefresh"
@@ -20,7 +20,7 @@
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:listitem="@layout/user_card" />
+            tools:listitem="@layout/job_card" />
 
         <ProgressBar
             android:id="@+id/progress"
