--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="common_spacing">16dp</dimen>
+    <dimen name="double_spacing">32dp</dimen>
     <dimen name="icon_min_size">48dp</dimen>
     <dimen name="job_spacing">20dp</dimen>
     <dimen name="posts_avatar_size">48dp</dimen>
@@ -11,6 +12,10 @@
     <dimen name="spaccing_login_reg">40dp</dimen>
     <dimen name="max_size_attachment">258dp</dimen>
     <dimen name="title_size_margin_start">56dp</dimen>
+    <dimen name="size_text_header">32sp</dimen>
+    <dimen name="size_enter_date_width">140dp</dimen>
+    <dimen name="size_enter_date_height">60dp</dimen>
+
 
 
 </resources>
