edited dimen user list

--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -8,6 +8,7 @@
     android:checkable="true"
     android:clickable="true"
     android:focusable="true"
+    android:layout_margin="@dimen/spacing_user_list"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
@@ -16,7 +17,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/common_spacing">
+        android:padding="@dimen/element_spacing">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/AvatarIV"
