--- a/app/src/main/res/layout/event_card.xml
+++ b/app/src/main/res/layout/event_card.xml
@@ -5,87 +5,100 @@
     android:id="@+id/EventCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_margin="@dimen/element_spacing"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent
+
 ">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/EventCardCL"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="@dimen/element_spacing">
+        android:layout_height="wrap_content">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/AvatarIV"
-            android:layout_width="@dimen/posts_avatar_size"
-            android:layout_height="@dimen/posts_avatar_size"
-            android:layout_marginTop="@dimen/element_spacing"
-            android:layout_marginBottom="@dimen/common_spacing"
-            android:contentDescription="@string/desc_avatar_image"
-            android:src="@drawable/img_test_avatar"
-            app:layout_constraintBottom_toBottomOf="@id/barrier_top"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-        <TextView
-            android:id="@+id/AuthorTV"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/HeadEventCardCL"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/element_spacing"
-            android:layout_marginEnd="@dimen/element_spacing"
-            android:ellipsize="end"
-            android:singleLine="true"
-            android:textSize="@dimen/size_text_title"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/PublishedEventTV"
-            app:layout_constraintEnd_toStartOf="@id/MenuIB"
-            app:layout_constraintStart_toEndOf="@id/AvatarIV"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Albert Ablyaev" />
+            app:layout_constraintBottom_toTopOf="@id/barrier_top"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/PublishedEventTV"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/element_spacing"
-            app:layout_constraintBottom_toBottomOf="@id/barrier_top"
-            app:layout_constraintEnd_toStartOf="@id/MenuIB"
-            app:layout_constraintStart_toEndOf="@id/AvatarIV"
-            app:layout_constraintTop_toBottomOf="@id/AuthorTV"
-            tools:text="12.02.21 13:00" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/AvatarIV"
+                android:layout_width="@dimen/posts_avatar_size"
+                android:layout_height="@dimen/posts_avatar_size"
+                android:layout_margin="@dimen/common_spacing"
+                android:contentDescription="@string/desc_avatar_image"
+                android:src="@drawable/img_test_avatar"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageButton
-            android:id="@+id/MenuIB"
-            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/element_spacing"
-            android:contentDescription="@string/desc_icon_menu_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_menu_vert_24dp" />
+
+            <TextView
+                android:id="@+id/AuthorTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/element_spacing"
+                android:ellipsize="end"
+                android:singleLine="true"
+                android:textSize="@dimen/size_text_title"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/PublishedEventTV"
+                app:layout_constraintEnd_toStartOf="@id/MenuIB"
+                app:layout_constraintStart_toEndOf="@id/AvatarIV"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed"
+                tools:text="Albert Ablyaev" />
+
+            <TextView
+                android:id="@+id/PublishedEventTV"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/element_spacing"
+                android:layout_marginEnd="@dimen/element_spacing"
+                android:layout_marginBottom="@dimen/element_spacing"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/MenuIB"
+                app:layout_constraintStart_toEndOf="@id/AvatarIV"
+                app:layout_constraintTop_toBottomOf="@id/AuthorTV"
+
+                tools:text="12.02.21 13:00" />
+
+            <ImageButton
+                android:id="@+id/MenuIB"
+                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/element_spacing"
+                android:contentDescription="@string/desc_icon_menu_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_menu_vert_24dp" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/barrier_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:barrierDirection="bottom"
-            app:constraint_referenced_ids="AvatarIV,PublishedEventTV,MenuIB" />
+            app:constraint_referenced_ids="HeadEventCardCL" />
 
         <TextView
             android:id="@+id/TextEventTV"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/common_spacing"
+            android:padding="@dimen/common_spacing"
             android:autoLink="web"
-            android:padding="@dimen/element_spacing"
             app:layout_constraintBottom_toTopOf="@id/LinkEventTV"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/DateEventTV"
-            tools:text="@tools:sample/lorem[100]" />
+            tools:text="@tools:sample/lorem[20]" />
 
         <FrameLayout
             android:id="@+id/AttachmentGroup"
@@ -94,21 +107,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/barrier_top">
+
             <ImageView
                 android:id="@+id/imageAttachment"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/max_size_attachment"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/desc_attachment_image"
-                android:padding="@dimen/element_spacing"
                 android:visibility="gone"
                 tools:src="@drawable/ic_people_outline_24dp"
                 tools:visibility="visible" />
+
             <include
                 android:id="@+id/audio_attachment"
                 layout="@layout/audio_play"
                 android:visibility="gone"
                 tools:visibility="visible" />
+
             <include
                 android:id="@+id/video_attachment"
                 layout="@layout/video_play" />
@@ -118,19 +133,20 @@
             android:id="@+id/TypeEventTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/element_spacing"
+            android:paddingStart="@dimen/common_spacing"
+            android:paddingEnd="@dimen/common_spacing"
             android:layout_marginTop="@dimen/common_spacing"
-            android:layout_marginEnd="@dimen/element_spacing"
             android:textStyle="bold"
             app:layout_constraintTop_toBottomOf="@id/AttachmentGroup"
+            tools:layout_editor_absoluteX="8dp"
             tools:text="Online" />
 
         <TextView
             android:id="@+id/DateEventTV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/element_spacing"
-            android:layout_marginEnd="@dimen/element_spacing"
+            android:paddingStart="@dimen/common_spacing"
+            android:paddingEnd="@dimen/common_spacing"
             app:layout_constraintTop_toBottomOf="@id/TypeEventTV"
             tools:text="12.02.2021 10:45" />
 
@@ -139,7 +155,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="web"
-            android:padding="@dimen/element_spacing"
+            android:paddingStart="@dimen/common_spacing"
+            android:paddingEnd="@dimen/common_spacing"
             android:visibility="gone"
             app:layout_constraintTop_toBottomOf="@id/TextEventTV"
             tools:text="https://03www.ru/"
@@ -152,18 +169,18 @@
             app:barrierDirection="bottom"
             app:constraint_referenced_ids="TextEventTV,AttachmentGroup,LinkEventTV" />
 
-        <ImageButton
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/ShareIB"
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_spacing"
+            android:layout_margin="@dimen/common_spacing"
             android:background="@android:color/transparent"
             android:contentDescription="@string/desc_icon_share"
+            app:icon="@drawable/ic_share_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/LikeIB"
-            app:layout_constraintTop_toBottomOf="@id/barrier_middle"
-            app:srcCompat="@drawable/ic_share_24dp" />
+            app:layout_constraintTop_toBottomOf="@id/barrier_middle" />
 
 
         <com.google.android.material.button.MaterialButton
@@ -171,7 +188,7 @@
             style="@style/Widget.AppTheme.LikeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_spacing"
+            android:layout_margin="@dimen/common_spacing"
             android:checkable="true"
             android:contentDescription="@string/desc_icon_like"
             app:layout_constraintStart_toStartOf="parent"
@@ -183,7 +200,7 @@
             style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/common_spacing"
+            android:layout_margin="@dimen/common_spacing"
             android:contentDescription="@string/desc_icon_people"
             android:src="@drawable/ic_people_outline_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
