--- a/app/src/main/res/layout/user_card.xml
+++ b/app/src/main/res/layout/user_card.xml
@@ -8,7 +8,10 @@
     android:checkable="true"
     android:clickable="true"
     android:focusable="true"
-    android:layout_margin="@dimen/spacing_user_list"
+    android:layout_marginBottom="@dimen/spacing_user_list"
+    android:layout_marginTop="@dimen/spacing_user_list"
+    android:layout_marginStart="@dimen/element_spacing"
+    android:layout_marginEnd="@dimen/element_spacing"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent">
