--- a/app/src/main/res/layout/choose_users_fragment.xml
+++ b/app/src/main/res/layout/choose_users_fragment.xml
@@ -6,12 +6,13 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/ChooseUserTB"
+        android:id="@+id/ChooseUserABL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/ChooseUserTTB"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?attr/actionBarSize"
@@ -24,10 +25,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        app:layout_constraintTop_toBottomOf="@id/ChooseUserTB">
+        app:layout_constraintTop_toBottomOf="@id/ChooseUserABL">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_user_choose"
+            android:id="@+id/ListUserChoose"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:listitem="@layout/user_card_choose" />
